--- a/testeLink.html
+++ b/testeLink.html
@@ -1,7 +1,4 @@
-<p>
-  Visite a página do jogo em
-  <a href="https://www.roblox.com/games/?SortFilter=default&TimeFilter=0">Roblox</a>
-</p>
+<h1>Blox Piece</h1>
 <!-- O código acima abre o link na mesma página -->
 
 <p>
@@ -11,3 +8,5 @@
   </a>
 </p>
 <!-- O código acima abre o link em outra página -->
+
+<p>Acompanhe a contagem regressiva do jogo em <a href="https://itsalmo.st/bloxpiece" target="_blank" >Lançamento</a></p>
