--- a/testeLink.html
+++ b/testeLink.html
@@ -1,12 +1,24 @@
 <h1>Blox Piece</h1>
-<!-- O código acima abre o link na mesma página -->
-
+<!-- O código abaixo abre o link na mesma página -->
+<img
+  src="https://t5.rbxcdn.com/b1bfcb457e59b15c9c8955701d00dd07"
+  width="350"
+  height="200"
+  alt="Page do jogo"
+/>
 <p>
   Visite a página do jogo em
-  <a href="https://www.roblox.com/games/?SortFilter=default&TimeFilter=0" target="_blank">
-    Roblox
-  </a>
+  <a
+    href="https://www.roblox.com/games/?SortFilter=default&TimeFilter=0"
+    target="_blank"
+  >
+    Roblox </a
+  >.
 </p>
-<!-- O código acima abre o link em outra página -->
+<hr>
+<!-- O código abaixo abre o link em outra página -->
 
-<p>Acompanhe a contagem regressiva do jogo em <a href="https://itsalmo.st/bloxpiece" target="_blank" >Lançamento</a></p>
+<p>
+  Acompanhe a contagem regressiva do jogo em
+  <a href="https://itsalmo.st/bloxpiece" target="_blank">Lançamento</a>.
+</p>
