É tudo por hoje !

--- a/testeLink.html
+++ b/testeLink.html
@@ -15,10 +15,30 @@
     Roblox </a
   >.
 </p>
-<hr>
+
+<hr />
 <!-- O código abaixo abre o link em outra página -->
 
 <p>
   Acompanhe a contagem regressiva do jogo em
   <a href="https://itsalmo.st/bloxpiece" target="_blank">Lançamento</a>.
 </p>
+
+<hr />
+
+<ul>
+  <li>Itens de lista não organizada.</li>
+  <li>Itens de lista não organizada.</li>
+  <li>Itens de lista não organizada.</li>
+  <li>Itens de lista não organizada.</li>
+  <li>Itens de lista não organizada.</li>
+</ul>
+
+<ol>
+  <li>Itens de lista organizada.</li>
+  <li>Itens de lista organizada.</li>
+  <li>Itens de lista organizada.</li>
+  <li>Itens de lista organizada.</li>
+  <li>Itens de lista organizada.</li>
+  <li>Itens de lista organizada.</li>
+</ol>
