--- a/testeLink.html
+++ b/testeLink.html
@@ -27,18 +27,18 @@
 <hr />
 
 <ul>
-  <li>Itens de lista não organizada.</li>
-  <li>Itens de lista não organizada.</li>
-  <li>Itens de lista não organizada.</li>
-  <li>Itens de lista não organizada.</li>
-  <li>Itens de lista não organizada.</li>
+  <li>Itens de lista não <em>organizada</em>.</li>
+  <li>Itens de lista não <em>organizada</em>.</li>
+  <li>Itens de lista não <em>organizada</em>.</li>
+  <li>Itens de lista não <em>organizada</em>.</li>
+  <li>Itens de lista não <em>organizada</em>.</li>
 </ul>
 
 <ol>
-  <li>Itens de lista organizada.</li>
-  <li>Itens de lista organizada.</li>
-  <li>Itens de lista organizada.</li>
-  <li>Itens de lista organizada.</li>
-  <li>Itens de lista organizada.</li>
-  <li>Itens de lista organizada.</li>
+  <li>Itens de lista <strong>organizada</strong>.</li>
+  <li>Itens de lista <strong>organizada</strong>.</li>
+  <li>Itens de lista <strong>organizada</strong>.</li>
+  <li>Itens de lista <strong>organizada</strong>.</li>
+  <li>Itens de lista <strong>organizada</strong>.</li>
+  <li>Itens de lista <strong>organizada</strong>.</li>
 </ol>
