--- a/testeLink.html
+++ b/testeLink.html
@@ -26,6 +26,8 @@
 
 <hr />
 
+<h2>Lista não organizada</h2>
+
 <ul>
   <li>Itens de lista não <em>organizada</em>.</li>
   <li>Itens de lista não <em>organizada</em>.</li>
@@ -33,6 +35,10 @@
   <li>Itens de lista não <em>organizada</em>.</li>
   <li>Itens de lista não <em>organizada</em>.</li>
 </ul>
+
+<hr />
+
+<h2>Lista organizada</h2>
 
 <ol>
   <li>Itens de lista <strong>organizada</strong>.</li>
