--- a/_base.html
+++ b/_base.html
@@ -2,7 +2,7 @@
 <!-- doctype informa ao agente de usuário a versão do HTML que deve ser renderizada -->
 <html lang="pt-br" >
     <head>
-        <title> Página de exemplo de estrutura básica </title>
+        <title> Página exemplo de estrutura básica </title>
         <meta charset="utf-8" >
         <meta name="author" content="Victor">
         <meta name="description" content="aprendendo semântica do HTML">
