--- a/_base.html
+++ b/_base.html
@@ -10,6 +10,6 @@
     </head>
     <body>
         <h1>Estrutura básica</h1>
-        <p>Ao usar utf-8 o browser não terá problemas com acentos</p>
+        <p>Ao usar utf-8 o browser não terá problemas com acentos.</p>
     </body>
 </html>
