--- a/testeCSS.html
+++ b/testeCSS.html
@@ -3,7 +3,7 @@
 <html lang="pt-br">
 
 <head>
-  <title>Página exemplo de estrutura básica</title>
+  <title>Primeiro CSS</title>
   <meta charset="utf-8" />
   <meta name="author" content="Victor" />
   <meta name="description" content="aprendendo semântica do HTML" />
