--- a/Projeto/tentativas.html
+++ b/Projeto/tentativas.html
@@ -1,61 +1,69 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/estilo.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/estilo.css" />
     <title>Tentativas</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="principal">
-        <header class="hero">
-            <nav>
-                <ul>
-                    <li> <a href="tentativas.html"> Index </a> </li>
-                    <li> <a href="#"> Projetos </a> </li>
-                    <li> <a href="#"> Quem sou </a> </li>
-                </ul>
-            </nav>
-            <div class="hero-content">
-                <h1>Curso Web Fundamentos</h1>
-                <p>Aprenda HTML, CSS e Javascript</p>
-            </div>
-        </header>
-        <main>
-            <section class="content-section">
-                <div class="card">
-                    <img src="" alt="">
-                    <p>Seletores </p>
-                </div>
+      <header class="hero">
+        <nav>
+          <ul>
+            <li><a href="tentativas.html"> Index </a></li>
+            <li><a href="#"> Projetos </a></li>
+            <li><a href="#"> Quem sou </a></li>
+          </ul>
+        </nav>
+        <div class="hero-content">
+          <h1>Curso Web Fundamentos</h1>
+          <p>Aprenda HTML, CSS e Javascript</p>
+        </div>
+      </header>
+      <main>
+        <section class="content-section">
+          <div class="card">
+            <img
+              src="imagens/Gwyn_Lord_of_Sunlight.jpg"
+              width="200"
+              height="120"
+              alt=""
+            />
+            <p>Seletores</p>
+          </div>
 
-                <div class="card">
-                    <img src="imagens/ar.jpg" width="200" height="120" alt="">
-                    <p>Posicionamento </p>
-                </div>
+          <div class="card">
+            <img src="imagens/ar.jpg" width="200" height="120" alt="" />
+            <p>Posicionamento</p>
+          </div>
 
-                <div class="card">
-                    <img src="" alt="">
-                    <p>Fontes</p>
-                </div>
-            </section>
+          <div class="card">
+            <img
+              src="imagens/b1452dc10c0189b2bd7d1acbc3551590.png"
+              width="200"
+              height="120"
+              alt=""
+            />
+            <p>Fontes</p>
+          </div>
+        </section>
 
-            <section class="content-section">
-                <article>
-                    <header>
-                        <h2>Titulo do article</h2>
-                    </header>
-                    <p>Paragrafo 1</p>
-                    <p>Paragrafo 2</p>
-                </article>
-            </section>
-        </main>
-        <footer>
-            <p>Copyright &copy;2019</p>
-        </footer>
+        <section class="content-section">
+          <article>
+            <header>
+              <h2>Titulo do article</h2>
+            </header>
+            <p>Paragrafo 1</p>
+            <p>Paragrafo 2</p>
+          </article>
+        </section>
+      </main>
+      <footer class="rodape">
+        <p>Copyright &copy;2019</p>
+      </footer>
     </div>
-</body>
-
+  </body>
 </html>
