--- a/curriculum_melhor.html
+++ b/curriculum_melhor.html
@@ -1,116 +1,121 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Curriculum</title>
     <style>
-        body {
-            width: 80%;
-            margin: auto;
-            /* centraliza na horizontal */
-            font-family: Arial, Helvetica, sans-serif;
-            color: #444;
-        }
+      body {
+        width: 80%;
+        margin: auto;
+        /* centraliza na horizontal */
+        font-family: Arial, Helvetica, sans-serif;
+        color: #444;
+      }
 
-        h1 {
-            color: rgb(18, 2, 59);
-            text-align: center;
-            background-color: rgb(3, 114, 241);
-            font-size: 46px;
-        }
+      h1 {
+        color: rgb(18, 2, 59);
+        text-align: center;
+        background-color: rgb(3, 114, 241);
+        font-size: 46px;
+      }
 
-        h2 {
-            color: rgb(229, 255, 0);
-            background-color: turquoise;
-            font-size: 36px;
-            border-bottom: solid 3px red;
-            padding: 5px;
-        }
+      h2 {
+        color: rgb(229, 255, 0);
+        background-color: turquoise;
+        font-size: 36px;
+        border-bottom: solid 3px red;
+        padding: 5px;
+      }
 
-        ul {
-            padding-left: 0px;
-        }
+      ul {
+        padding-left: 0px;
+      }
 
-        li {
-            padding-left: 0px;
-            list-style-position: inside;
-        }
-        a{
-            text-decoration: none;
-        }
-        a:hover{
-            text-decoration: underline;
-        }
+      li {
+        padding-left: 0px;
+        list-style-position: inside;
+      }
+      a {
+        text-decoration: none;
+      }
+      a:hover {
+        text-decoration: underline;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>João da Silva</h1>
-    <p> Brasileiro, solteiro, 30 anos. </p>
+    <p>Brasileiro, solteiro, 30 anos.</p>
 
     <h2>Objetivo</h2>
-    <p> Front-End Developer, Desenvolvedor Front End, Webdesigner. </p>
+    <p>Front-End Developer, Desenvolvedor Front End, Webdesigner.</p>
 
     <h2>Experiência profissional</h2>
 
-    <h3><a href="https://www.uol.com.br/" target="_blank" >UOL</a> - 12/2014 até 02/2015 - 2 meses</h3>
+    <h3>
+      <a href="https://www.uol.com.br/" target="_blank">UOL</a> - 12/2014 até
+      02/2015 - 2 meses
+    </h3>
     <h4>Analista Programador - 2 meses</h4>
     <p>
-        Desenvolvimento de aplicações web com HTML, CSS, AngularJS, Javascript,
-        Ajax, Rest, JSON, PHP.
+      Desenvolvimento de aplicações web com HTML, CSS, AngularJS, Javascript,
+      Ajax, Rest, JSON, PHP.
     </p>
 
-    <h3><a href="https://www.terra.com.br/" target="_blank" >Terra</a> - 1 ano</h3>
+    <h3>
+      <a href="https://www.terra.com.br/" target="_blank">Terra</a> - 1 ano
+    </h3>
     <h4>Desenvolvedor Front End - 1 ano</h4>
     <p>
-        Atuei como Desenvolvedor Front-End Pleno, participando ativamente em todos
-        os projetos da empresa (aplicação WEB, aplicativo Mobile e Portais).
+      Atuei como Desenvolvedor Front-End Pleno, participando ativamente em todos
+      os projetos da empresa (aplicação WEB, aplicativo Mobile e Portais).
     </p>
 
-    <p> Trabalhei efetivamente usando tecnologias como HTML5, CSS, AngularJS,
-        Wordpress, PHP, JSON e Javascript. </p>
+    <p>
+      Trabalhei efetivamente usando tecnologias como HTML5, CSS, AngularJS,
+      Wordpress, PHP, JSON e Javascript.
+    </p>
 
-    <h3><a href="https://g1.globo.com/" target="_blank" >G1</a> - 6 meses</h3>
+    <h3><a href="https://g1.globo.com/" target="_blank">G1</a> - 6 meses</h3>
     <h4>Desenvolvedor Front End - 6 meses</h4>
     <p>
-        Trabalhando com portais, landing pages e eCommerce, codando manualmente
-        HTML, CSS, JavaScript, trabalhando diretamente com a equipe de Back-End
-        com PHP.
+      Trabalhando com portais, landing pages e eCommerce, codando manualmente
+      HTML, CSS, JavaScript, trabalhando diretamente com a equipe de Back-End
+      com PHP.
     </p>
 
     <h2>Formação</h2>
     <h3>Graduação em Tecnologia da Informação</h3>
-    <p> 01/2010 a 12/2012 </p>
-    <p> Faculdade qualquer uma </p>
+    <p>01/2010 a 12/2012</p>
+    <p>Faculdade qualquer uma</p>
 
     <h3>Pós-graduação em Projetos computacionais em tecnologias front-end</h3>
-    <p> 08/2014 a 12/2015 </p>
-    <p> Faculdade qualquer uma </p>
+    <p>08/2014 a 12/2015</p>
+    <p>Faculdade qualquer uma</p>
 
     <h2>Cursos / Especializações</h2>
     <ul>
-        <li>
-            Participação no evento Search Masters Brasil  São Paulo (2014).
-        </li>
-        <li>
-            Certificação em Google Adwords  Google Partners Weekend (2015).
-        </li>
+      <li>
+        Participação no evento Search Masters Brasil  São Paulo (2014).
+      </li>
+      <li>
+        Certificação em Google Adwords  Google Partners Weekend (2015).
+      </li>
     </ul>
 
     <h3>HTML5</h3>
-    <p> serfrontend - 40h - 2018 </p>
+    <p>serfrontend - 40h - 2018</p>
 
     <h3>Javascript</h3>
-    <p> serfrontend - 40h - 2018 </p>
+    <p>serfrontend - 40h - 2018</p>
 
     <h3>CSS3</h3>
-    <p> serfrontend - 40h - 2018 </p>
+    <p>serfrontend - 40h - 2018</p>
 
     <h3>Idiomas</h3>
-    <p> Inglês: Básico </p>
-</body>
-
+    <p>Inglês: Básico</p>
+  </body>
 </html>
