--- a/09-display-inicio.html
+++ b/09-display-inicio.html
@@ -2,7 +2,7 @@
 <!-- doctype informa ao agente de usuario a versão do html que deve ser renderizada-->
 <html lang="pt-br">
   <head>
-    <title>pagina de exemplo estrutura basica</title>
+    <title>Teste de display</title>
     <meta charset="utf-8" />
     <meta name="author" content="Daniel" />
     <meta name="description" content="descrição bacanuda" />
@@ -24,6 +24,20 @@
       }
       div {
         margin: 50px;
+      }
+      b, em, a, span {
+        background-color: greenyellow;
+      }
+      em {
+        height: 50px;
+        width: 200px;
+        margin: 5px;
+        padding: 50px;
+        display: inline-block;
+        visibility: hidden;
+      }
+      img {
+        display: block;
       }
     </style>
   </head>
