--- a/Projeto-1/tentativas.html
+++ b/Projeto-1/tentativas.html
@@ -25,7 +25,7 @@
       </header>
       <main>
         <section class="content-section">
-          <div class="card">
+          <div class="card card-1">
             <img
               src="imagens/Gwyn_Lord_of_Sunlight.jpg"
               width="200"
@@ -35,12 +35,12 @@
             <p>Seletores</p>
           </div>
 
-          <div class="card">
+          <div class="card card-2">
             <img src="imagens/ar.jpg" width="200" height="120" alt="" />
             <p>Posicionamento</p>
           </div>
 
-          <div class="card">
+          <div class="card card-3">
             <img
               src="imagens/b1452dc10c0189b2bd7d1acbc3551590.png"
               width="200"
