--- a/Projeto-1/projeto1.html
+++ b/Projeto-1/projeto1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/estilo.css" />
-    <title>Tentativas</title>
+    <title>Primeiro projeto</title>
   </head>
 
   <body>
