--- a/curriculum_melhor.html
+++ b/curriculum_melhor.html
@@ -12,6 +12,7 @@
         /* centraliza na horizontal */
         font-family: Arial, Helvetica, sans-serif;
         color: #444;
+        background-color: rgb(0, 0, 0);
       }
 
       h1 {
