--- a/11-float.html
+++ b/11-float.html
@@ -8,6 +8,9 @@
     <meta name="description" content="descrição bacanuda" />
     <meta name="keywords" content="html5, tecnologia" />
     <style>
+      body {
+        font-family: Arial, Helvetica, sans-serif;
+      }
       #container {
         width: 80%;
         padding: 15px;
@@ -65,6 +68,6 @@
     <header>header</header>
     <nav>nav</nav>
     <main>main</main>
-    <footer>footer</footer>
+    <footer>Excepteur et sit eu ea anim excepteur est.</footer>
   </body>
 </html>
