--- a/position.html
+++ b/position.html
@@ -8,29 +8,29 @@
     <meta name="description" content="descrição bacanuda" />
     <meta name="keywords" content="html5, tecnologia" />
     <style>
-        #um {
-            background-color:red ;
-            padding: 10px;
-            width: 100%;
-            height: 80px;
-        }
-        #dois {
-            background-color: orange;
-            padding: 10px;
-            width: 80%;
-            height: 50px;
-            position: relative;
-        }
-        #tres {
-            background-color: palegreen;
-            width: 25px;
-            height: 25px;
-            position: absolute;
-            bottom: 20px;
-            right: 15px;
-        }
+      #um {
+        background-color: red;
+        padding: 10px;
+        width: 100%;
+        height: 80px;
+      }
+      #dois {
+        background-color: orange;
+        padding: 10px;
+        width: 80%;
+        height: 50px;
+        position: relative;
+      }
+      #tres {
+        background-color: palegreen;
+        width: 25px;
+        height: 25px;
+        position: absolute;
+        bottom: 20px;
+        right: 15px;
+        text-align: center;
+      }
     </style>
-
   </head>
   <body>
     <h1>Position</h1>
@@ -64,18 +64,9 @@
         suscipit mauris tortor aliquam metus potenti.
       </p>
       <p>
-        Quis ad placerat lacinia lacus tincidunt sodales ipsum maecenas
-        sollicitudin quisque in donec ultricies volutpat rhoncus, primis turpis
-        tempor tincidunt ultrices massa quam per ad porttitor tempor nulla hac
-        taciti. ornare odio ornare nisi convallis donec et proin eu, curae vitae
-        vehicula sem semper facilisis vel etiam elementum, eget class ante
-        cursus dui faucibus habitasse. posuere nullam luctus porta imperdiet
-        cubilia curabitur id, ullamcorper vulputate ultricies elit fames cras
-        semper, lacus donec malesuada sapien lacinia bibendum, dapibus iaculis
-        blandit eleifend vel vehicula. commodo aliquam at tincidunt a donec
-        lorem donec adipiscing velit, feugiat sollicitudin sem donec dui justo
-        purus aliquam, iaculis malesuada blandit rhoncus odio auctor condimentum
-        mattis.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
+        reiciendis, excepturi, quos reprehenderit obcaecati quidem fuga pariatur
+        necessitatibus autem mollitia quia maiores magnam.
       </p>
 
       <p>
