--- a/1_módulo/transitions_3.html
+++ b/1_módulo/transitions_3.html
@@ -6,10 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Landing page</title>
     <style>
-      * {
-        margin: 0;
-        padding: 0;
-      }
+      
       body {
         font-family: sans-serif;
         background: rgb(73, 71, 71);
@@ -20,7 +17,7 @@
       .container {
         max-width: 960px;
         margin: auto;
-        padding: 0 30px;
+        padding: 10px 30px;
       }
       #showcase {
         height: 300px;
@@ -44,12 +41,12 @@
       }
       #content {
         position: relative;
-        animation-name: content;
+        animation-name: contenter;
         animation-duration: 3s;
         animation-fill-mode: forwards;
         text-shadow: -2px 2px rgb(31, 27, 27);
       }
-      @keyframes content {
+      @keyframes contenter {
         0% {
           left: -1000px;
         }
