--- a/MeuProjeto/uno.html
+++ b/MeuProjeto/uno.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -35,17 +35,17 @@
       <section class="gallery">
         <div class="card">
           <img src="imagens/modelo1.jpg" alt="modelo 1" />
-          <p class="gallery-title">Pitombudo Johnson</p>
+          <p class="gallery-title">Ploft Johnson</p>
           <p class="gallery-text">Ele é deveras brabissimo</p>
         </div>
         <div class="card">
           <img src="imagens/modelo2.jpg" alt="modelo 1" />
-          <p class="gallery-title">Pitombundinha Junior</p>
+          <p class="gallery-title">Droft Junior</p>
           <p class="gallery-text">Ela é deveras junissima</p>
         </div>
         <div class="card">
           <img src="imagens/modelo3.jpg" alt="modelo 1" />
-          <p class="gallery-title">Pitombundona Maxwell</p>
+          <p class="gallery-title">Groft Maxwell</p>
           <p class="gallery-text">Ele é deveras cuzona</p>
         </div>
       </section>
