--- a/transitiones.html
+++ b/transitiones.html
@@ -13,7 +13,7 @@
 
         transition-property: all;
         transition-duration: 3s;
-        transition-timing-function: cubic-bezier();
+        transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
       }
       div:hover {
         height: 400px;
