--- a/teste.html
+++ b/teste.html
@@ -7,5 +7,7 @@
     <title>Torcolito</title>
     <style></style>
   </head>
-  <body></body>
+  <body>
+    <h1>Um teste pra lá de maluco !</h1>
+  </body>
 </html>
