--- a/1_módulo/tabelas.html
+++ b/1_módulo/tabelas.html
@@ -11,7 +11,7 @@
       }
       table {
         border-collapse: collapse;
-        width: 80%;
+        width: 124px 248px;
         margin: auto;
         background-color: darkgray;
         border: 3px solid rgb(37, 70, 102);
