--- a/ProjetoStrata/index.html
+++ b/ProjetoStrata/index.html
@@ -79,18 +79,14 @@
             ><img src="images/thumbs/04.jpg" alt="imagem"
           /></a>
           <p class="recent-works-cards-title">Magna sed consequat tempus</p>
-          <p>
-            Amet iaculis gravida etiam mi ipsum, mattis eros rhoncus dolor.
-          </p>
+          <p>Amet iaculis gravida etiam mi ipsum, mattis eros rhoncus dolor.</p>
         </article>
         <article class="recent-works-card">
           <a href="images/fulls/05.jpg"
             ><img src="images/thumbs/05.jpg" alt="imagem"
           /></a>
           <p class="recent-works-cards-title">Lorem ipsum dolor sit</p>
-          <p>
-            Aliquam sagittis sed ad auctor risus, nisl enim donec mattis.
-          </p>
+          <p>Aliquam sagittis sed ad auctor risus, nisl enim donec mattis.</p>
         </article>
         <article class="recent-works-card">
           <a href="images/fulls/06.jpg"
