--- a/1_módulo/form.html
+++ b/1_módulo/form.html
@@ -11,7 +11,7 @@
   <body>
     <h1>Exemplo de formulario</h1>
 
-    <form action="#" method="POST" class="formLogin">
+    <form action="#" method="POST">
       <fieldset>
         <legend>Dados pessoais</legend>
 
